SERVER-12565: only create freelist for extents when needed